--- a/templates/home.html
+++ b/templates/home.html
@@ -3,30 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Digit Classifier App</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   </head>
-
-  <script>
-    function myFunction() {
-      $.ajax({
-                  url: "/predict",
-                  type: "POST"
-              }).done(function(response) {
-                var html = "<br><br><br><p> <b> Prediction : <b><p>";
-                response = response.result;
-                     $.each(response,function(key,val){
-                     console.log(val);
-                        html += "<p>" + val +"<p>"
-                    });
-                    html += "<br>";
-                    $(".show-data").append(html);
-                });
-    };
-    </script>
   <body>
-              <button id="clicked" onclick="myFunction()">Predict</button>
-          </p>
-      <div class="show-data" >
-      </div>
+    <form action = "/predict" method = "POST" enctype = "multipart/form-data">
+      <input type = "file" name = "file" />
+      <input type = "submit"/>
+    </form>
   </body>
 </html>
